Fix for reduntant scrollbars appearing in the autocomplete suggestion list #HOT-19

--- a/src/css/jquery.handsontable.css
+++ b/src/css/jquery.handsontable.css
@@ -430,8 +430,12 @@ Comment For Cell
 * Autocomplete Editor
 */
 .handsontable .autocompleteEditor.handsontable {
+  padding-right: 17px;
+}
+.handsontable .autocompleteEditor.handsontable.htMacScroll {
   padding-right: 15px;
 }
+
 
 /**
  * Handsontable listbox theme
